# big-tonys-auto

./: README.md
agent/: Dockerfile  ENV_VARS.agent.sample  README.md  agent.py  pyproject.toml
frontend/: ENV_VARS.frontend.sample  README.md  app-config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/connection-details/: route.ts
frontend/app/call/: page.tsx
frontend/components/: app.tsx  call-container.tsx  footer.tsx  header.tsx  session-view.tsx  web-call-button.tsx  welcome.tsx
frontend/components/livekit/: device-select.tsx  media-tiles.tsx
frontend/components/livekit/agent-control-bar/: agent-control-bar.tsx
frontend/components/livekit/agent-control-bar/hooks/: use-agent-control-bar.ts
frontend/components/livekit/chat/: chat-entry.tsx  chat-input.tsx  chat-message-view.tsx
frontend/hooks/: useConnectionDetails.ts
frontend/lib/: types.ts  utils.ts
